# MicroservicesWithAWS_SearchAPI_Python

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_py.html  index.html  pyproject.toml  status.json  test_get_es.py  test_get_es_py.html  test_health_check.py  test_health_check_py.html  test_search.py  test_search_hotels.py  test_search_hotels_py.html  test_search_py.html
.github/workflows/: cd.yaml  ci.yaml
